Corrected z-index of contact div allowing clicks on icons, changed pucmon description

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -129,6 +129,11 @@ nav {
     height: 10px !important;
 }
 
+#media {
+    position: relative; 
+    z-index: 1;
+}
+
 /* Card */
 
 .card span {
